--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,3 +20,8 @@ where = ["swarm/"]
 [build-system]
 requires = ["setuptools >= 61.0"]
 build-backend = "setuptools.build_meta"
+
+[dependency-groups]
+test = [
+    "pytest>=8.3.5",
+]
