--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,9 @@ requires = ["setuptools >= 61.0"]
 build-backend = "setuptools.build_meta"
 
 [dependency-groups]
+cuda = [
+    "jax[cuda]>=0.6.0",
+]
 test = [
     "pytest>=8.3.5",
 ]
