--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,9 @@ requires = ["setuptools >= 61.0"]
 build-backend = "setuptools.build_meta"
 
 [dependency-groups]
+app = [
+    "fastapi[standard]>=0.115.12",
+]
 cuda = [
     "jax[cuda]>=0.6.0",
 ]
