--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,10 @@ dependencies = [
 [tool.setuptools.packages.find]
 where = ["swarm/"]
 
+[tool.ruff]
+# Omit all agent code (which is auto generated)
+extend-exclude = ["swarm/agents/"]
+
 [build-system]
 requires = ["setuptools >= 61.0"]
 build-backend = "setuptools.build_meta"
